save-old-conf/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: ingress-nginx
---

apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: dev
---

apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: prod
---

apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: staging
