save-old-conf/ingress-grafana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: grafana
  namespace: kube-prometheus-stack
spec:
  ingressClassName: nginx
  rules:
  - host: grafana.devops-youss.cloudns.ph
    http:
      paths:
      - backend:
          service:
            name: kube-prometheus-stack-grafana
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - grafana.devops-youss.cloudns.ph
    secretName: letsencrypt-prod-grafana
