save-old-conf/ingress-pgadmin.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-pgadmin
  namespace: dev
  generation: 2
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    #nginx.ingress.kubernetes.io/rewrite-target: /
    #kubernetes.io/ingress.class: "nginx"
    #nginx.ingress.kubernetes.io/ssl-redirect: "false"
    #nginx.ingress.kubernetes.io/configuration-snippet: |
    #  proxy_set_header X-Script-Name /pgadmin;
spec:
  tls:
   - hosts:
       - pgadmin.devops-youss.cloudns.ph
   secretName: letsencrypt-prod

  ingressClassName: nginx
  rules:
  - host: pgadmin.devops-youss.cloudns.ph 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pgadmin-dev
            port:
              number: 8080
